test_scores/negative_dimers/features/Q96AX1.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q96AX1.pkl.xz